# 2025-Reefscape

./: .factorypath  .gitignore  ;  AdvantageScope Swerve Calibration.json  Auto Tuning.json  LICENSE.md  README.md  build.gradle  comp-tuner-swerve-project.json  dev-tuner-swerve-project.json  settings.gradle  tuner-swerve-project.json
.github/: CODEOWNERS
.github/workflows/: build.yml
.wpilib/: wpilib_preferences.json
ascope_assets/Robot_AlphaBot/: config.json  model_0.glb
ascope_assets/Robot_GupX/: config.json
ascope_assets/Robot_plex/: config.json
eigen/unsupported/Eigen/CXX11/src/Tensor/: README.md
gradle/wrapper/: gradle-wrapper.properties
native/tinympc/: build.gradle
native/tinympc/app/native/: TinyMPCWrapper.cpp
native/tinympc/app/native/tinympc/: CMakeLists.txt  codegen.cpp  tiny_api.hpp  types.hpp
native/tinympc/app/src/main/java/: TinyMPCWrapper.java  TinyMPCWrapperTest.java
pipelines/: AprilTagsLeft.vpr  AprilTagsRight.vpr
src/main/deploy/: elastic-layout.json
src/main/deploy/choreo/: ALeftHP.traj  A_CloseLeftHP.traj  A_CloseRightHP.traj  A_LeftHP.traj  A_RightHP.traj  AccelTesting.traj  Accuracy Test.traj  AccuracyTest.traj  BLeftHP.traj  B_CloseLeftHP.traj  B_CloseRightHP.traj  B_LeftHP.traj  B_RightHP.traj  CRightHP.traj  C_CloseLeftHP.traj  C_CloseRightHP.traj  C_LeftHP.traj  C_RightHP.traj  Close Nodes.traj  CloseLeftHP_A.traj  CloseLeftHP_B.traj  CloseLeftHP_C.traj  CloseLeftHP_D.traj  CloseLeftHP_E.traj  CloseLeftHP_F.traj  CloseLeftHP_G.traj  CloseLeftHP_H.traj  CloseLeftHP_I.traj  CloseLeftHP_J.traj  CloseLeftHP_K.traj  CloseLeftHP_L.traj  CloseRightHP_A.traj  CloseRightHP_B.traj  CloseRightHP_C.traj  CloseRightHP_D.traj  CloseRightHP_E.traj  CloseRightHP_F.traj  CloseRightHP_G.traj  CloseRightHP_H.traj  CloseRightHP_I.traj  (+104 more)
src/main/java/choreo/trajectory/: DifferentialSample.java  SwerveSample.java
src/main/java/org/curtinfrc/: BuildConstants.java  Robot.java
src/main/java/org/curtinfrc/frc2025/: Autos.java  BuildConstants.java  Constants.java  Main.java  Robot.java  Superstructure.java  TinyMPCJNI.java  TinyMPCWrapper.java
src/main/native/cpp/: TinyMPCWrapper.cpp  TrajectoryGeneration.cpp  TrajgenJNI.cpp
src/main/native/include/: TrajectoryGeneration.h
tinympc/: .gitignore  build.gradle
tinympc/src/main/cpp/: codegen.cpp
tinympc/src/main/include/: tiny_api.hpp  types.hpp
trajectory_native/: CMakeLists.txt  Earthfile  build_vts.sh
trajoptlib/: build.gradle
vendordeps/: AdvantageKit.json  ChoreoLib2025.json  URCL.json  libgrapplefrc2025.json  photonlib.json
(+116 files in other folders)
